0.0.1
-----

* Converted to gem (previously was just a .c file)