@@ -5,14 +5,13 @@ def print_data(seed, persistence, octave, size_x, size_y, size_z)
 
   puts
 
-  # Note that it would be significantly faster to use #chunk in this example.
+  data = noise.chunk 0, 0, 0, size_x, size_y, size_z
   size_z.times do |z|
     size_y.times do |y|
       str = ''
 
       size_x.times do |x|
-        n = noise.run3d x, y, z
-        str << "%7.2f" % n
+        str << "%7.2f" % data[x][y]
       end
 
       puts str
@@ -20,6 +19,6 @@ def print_data(seed, persistence, octave, size_x, size_y, size_z)
   end
 end
 
-print_data 5, 1.0, 1, 10, 200, 99
+print_data 5, 1.0, 1, 10, 2000, 99
 
 puts "\nDone!"
